--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body style="font-size:14px;padding:0;margin:0;text-align: center">
         <textarea style="float:left;width:44vw;height:40vh;text-align:left"></textarea>
         <input type="button" style="width:10vw;float:left;padding:1rem" value="check">
-        <div style="width:45%;float:left;border:1px solid;height:40vh;text-align: left"></div>
+        <div style="width:45%;float:left;border:1px solid;height:40vh;text-align: left;overflow-y:scroll"></div>
         <div style="width:100vw;line-height:10vh;text-align:center;font-size:2rem">
             <label style="padding:0 1rem;">0</label><=><label style="padding:0 1rem;font-weight:bolder">0</label>
         </div>
